Added scroll functionality when string is long enogh that it goes off screen, and fixed the "Colorized!" notification.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="flex-container output-area">
             <div id="outputString" class="text-field" style="margin-right: 10px;">Your formatted text will appear here... </div>
-            <button onclick="copyToClipboard()">📋</button>
+            <button onclick="copyToClipboard(); showNotification('Colorized!');">📋</button>
         </div>
 
         <div class="flex-container preview-area">
