--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="customColors.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
+    <meta property="og:title" content="TM Linear Color Formatter" />
+    <meta property="og:description" content="This is a color code formatter for Trackmania. Input two colors and some text and it creates a linear change for each letter." />
+    <meta property="og:url" content="https://www.colorFormatter.xjk.yt" />
+    <meta property="og:image" content="https://www.colorFormatter.xjk.yt/content/img/og-img-preview.png" />
 </head>
 
 <body>
