--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Trackmania Linear Color Code Formatter</h1>
 
         <div class="flex-container settings-area">
-            <button id="toggleEscape" onclick="toggleEscapeCharacters()">Include \\</button>
+            <button id="toggleEscape" onclick="toggleEscapeCharacters()">Include \</button>
             <button id="clearFormatter" onclick="clearFormatter()">Reset formatter</button>
             <button id="toggleColorCard" onclick="toggleColorCard()">Set custom colors</button>
         </div>
