button is now blue

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <input type="color" id="startColor" name="startColor" value="#0033CC">
             <label for="endColor">End Color:</label>
             <input type="color" id="endColor" name="endColor" value="#33FFFF">
-            <button id="swapColors" onclick="swapColorValues()">Swap Colors</button>
+            <button id="swapColors" onclick="swapColorValues()" class="btn-blue">Swap Colors</button>
             <!-- <button onclick="applyColorChanges()">Apply</button> -->
         </div>
     </div>
