--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                     <label for="fourColors" class="btn">4</label>
                     <input type="radio" id="fiveColors" name="colorCount" value="5">
                     <label for="fiveColors" class="btn">5</label>
+                    <input type="radio" id="sixColors" name="colorCount" value="6">
+                    <label for="sixColors" class="btn">6</label>
+                    <input type="radio" id="sevenColors" name="colorCount" value="7">
+                    <label for="sevenColors" class="btn">7</label>
                 </div>
             </div>
 
@@ -76,10 +80,23 @@
                 <button onclick="swapColorValues()">Flipp</button>
             </div>
 
-            <div id="presetsPanel" class="flex-container settings-area presets-panel" style="display: none;">
+            <div id="presetsPanel" class="presets-panel" style="display: none;">
                 <h4>Presets</h4>
-                <button onclick="applyPresetColors(['#5BCEFA', '#F5A9B8', '#FFFFFF', '#F5A9B8', '#5BCEFA'])">Trans</button>
-                <!-- Add more buttons for other presets here -->
+                <div class="flex-container settings-area">
+                    <div class="settings-area">
+                        <button onclick="applyPresetColors(['#E40303', '#FF8C00', '#FFED00', '#008026', '#24408E', '#732982'])">Pride</button>
+                        <button onclick="applyPresetColors(['#5BCEFA', '#F5A9B8', '#FFFFFF', '#F5A9B8', '#5BCEFA'])">Trans</button>
+                        <button onclick="applyPresetColors(['#078D70', '#26CEAA', '#98E8C1', '#FFFFFF', '#7BADE2', '#5049CC', '#3D1A78'])">Gay men</button>
+                    </div>
+                    <div class="settings-area">
+                        <button onclick="applyPresetColors(['#D60270', '#D60270', '#9B4F96', '#0038A8', '#0038A8'])">Bisexual</button>
+                        <button onclick="applyPresetColors(['#FF218C', '#FFD800', '#21B1FF'])">Pansexual</button>
+                        <button onclick="applyPresetColors(['#000000', '#A3A3A3', '#FFFFFF', '#800080'])">Asexual</button>
+                    </div>
+                    <div class="settings-area">
+                        <button onclick="applyPresetColors(['#FCF434', '#FFFFFF', '#9C59D1', '#2C2C2C'])">Non-binary</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
