Made background reflect the color of the text, fixed swap button, updated title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TM Color Code Formatter</title>
+    <title>TM Gradient Color Code Formatter</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="customColors.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -19,7 +19,7 @@
     <canvas id="dotCanvas"></canvas>
 
     <div class="modal">
-        <h1>Trackmania Color Code Formatter</h1>
+        <h1>Trackmania Gradient Color Code Formatter</h1>
 
         <div class="flex-container settings-area">
             <button id="toggleEscape" onclick="toggleEscapeCharacters()">Include \</button>
