--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <!-- Option Card similar in style to Options Card -->
     <div id="optionsCard" class="options-card">
         <div class="option-card-content">
-            <div style="display: flex;">
+            <div style="display: flex; justify-content: space-between;">
                 <h2>Custom Formatting Options</h2>
                 <div style="display: flex; flex-direction: column; justify-content: center;">
                     <button onclick="toggleOptionCard()" style="height: 40px;">x</button>
